--- a/wiki/incense.wikitext
+++ b/wiki/incense.wikitext
@@ -4,8 +4,16 @@
 # a [[perfume]] often used in the [[rite]]s of various [[religion]]s.
 
 ====Translations====
-*Dutch: [[wierook]] ''m''
+*{{de}}: [[Weihrauch]]
+*{{nl}}: [[wierook]] ''m''
+*{{el}}: [[λιβανος]] ''m''
+*{{es}}: [[incienso]] ''m''
+*{{fr}}: [[encens]] ''m''
+*{{zh}}: [[香]], xīang
+*{{ja}}: [[お香]], o-koh
+*{{ko}}: [[향]]
 *{{pl}}: [[kadzidło]] ''n''
+*{{ru}}: [[ладан]] ''m''
 
 ===Verb===
 '''to incense''' ([[incensed]], incensed)
