corrected RP SAMPA (/ts/ -> /tS/) <chalk#7383>

--- a/wiki/chalk.wikitext
+++ b/wiki/chalk.wikitext
@@ -11,7 +11,7 @@ Old English [[cealc]], borrowed from Latin [[calx]] "limestone", borrowed from A
 | /ʧɑk/ || /tSAk/
 |-
 ! [[RP]]
-| /ʧɔːk/ || /tsO:k/
+| /ʧɔːk/ || /tSO:k/
 |}
 
 *'''Rhymes:''' [[Rhymes:English:-ɔːk|-ɔːk]]
