--- a/wiki/Hu.wikitext
+++ b/wiki/Hu.wikitext
@@ -1,11 +1,7 @@
 '''hu,'''  a clipping from  "human" (like "flu" from "influenza") - a 3rd person 
-gender-neutral pronoun.  It is pronounced [hju:] like "hu" in "human." Its 
-brevity and morphological structure (one open syllable: a consonant + a 
-vowel) make it similar t o other 3rd person pronouns -- a typical, easily 
-recognizable member of this class: '''he - she - hu.'''
+gender-neutral pronoun.  It is pronounced [hju:] like "hu" in "human." Its brevity and morphological structure (one open syllable: a consonant + a vowel) make it similar t o other 3rd person pronouns -- a typical, easily recognizable member of this class: '''he - she - hu.'''
 
-The derivative forms of "hu": reflexive "huself," [ [hju:self], possessive "hus"
-[hju:z], and objective "hu" [hju:].
+The derivative forms of "hu": reflexive "huself," [ [hju:self], possessive "hus" [hju:z], and objective "hu" [hju:].
 
 Thus the five forms of the 3rd person pronouns make up the table:
 
@@ -18,79 +14,29 @@ Thus the five forms of the 3rd person pronouns make up the table:
 </table>
 
 Examples:
-:An employee may choose to cover only huself and hus child or any number of children.
-:It's the vice-president's job to support the president and take hus place when hu is away.
-:A hero is one who places huself at risk for another.
-:Hu that has ears to hear, let hu hear.
-:It should be the chief aim of a university professor to exhibit huself in hus own true character - that is, as an ignorant human thinking, actively utilising hus small share of knowledge.
-:An introvert can easily become an extrovert when it is advantageous for hu to do so.
+*An employee may choose to cover only huself and hus child or any number of children.
+*It's the vice-president's job to support the president and take hus place when hu is away.
+*A hero is one who places huself at risk for another.
+*Hu that has ears to hear, let hu hear.
+*It should be the chief aim of a university professor to exhibit huself in hus own true character - that is, as an ignorant human thinking, actively utilising hus small share of knowledge.
+*An introvert can easily become an extrovert when it is advantageous for hu to do so.
 
-There are several advantages of "hu" over other contenders for the
-vacancy of a gender-neutral 3rd person pronoun:
+There are several advantages of "hu" over other contenders for the vacancy of a gender-neutral 3rd person pronoun:
 
-#  "Hu" is fully motivated, semantically and etymologically
-justified, as a shortened form of "HUman."  Whenever the pronoun is
-used, you have the idea  of the noun behind it making it memorable,
-inherently meaningful and suggestive (unlike purely
-conditional, artificial pronouns earlier suggested such as "e,
-et, mon, na, ne, po, se, tey").
-#"Hu" is a short, one syllable word.
-The use of "hu" (2 keystrokes) cuts effectively the
-time needed to type "he or she" (9 keystrokes);
-cf. "huself" (6)  and "himself or herself," (18) etc. This is a
-substantial economy of time, space,
-and effort in our frequent daily use of gender-neutral pronouns,
-especially in e-mails.
-# "Hu" fits the pattern of existing 3rd person pronouns ("he" and "she"),
-first, by including the  consonant "h" common to all of
-them; second, by containing only one vowel, like all of
-them.  "Hu - he - she" - these words, all open syllables,
-one consonant plus one vowel, are good partners in
-distributing the gender roles within one lexical family.
-# The spelling of "hu" coincides with its pronunciation; there
-are no irregularities of the k ind that damages, for example, the
-"s/he" pronoun, making it good in writing but unpronouncible.
-# "Hu" is used in a regular grammatical manner, in
-contrast to "they." "Hu" can be used automatically, without
-twisting the sentence to put all nouns in plu ral or
-exploiting "they" in a disagreeable manner to refer to a
-singular person.
-# It is easy to form derivatives from "hu" following the
-existing patterns:  "hus," "hu" ("hum"), and "huself".
-# If we decide to borrow a gender-neutral pronoun from
-ano ther language, we'll have to consider the Persian "u,"
-Arabic "hu" and Old English "ou." All of them could be
-easily incorporated in contemporary English with the
-addition or preservation of "h", as a shortened form of the
-genderless "human". It is also noteworthy that some modern-day languages, such as [[Finnish]], use only gender-neutral 3rd person pronouns.
+#  "Hu" is fully motivated, semantically and etymologically justified, as a shortened form of "HUman."  Whenever the pronoun is used, you have the idea  of the noun behind it making it memorable, inherently meaningful and suggestive (unlike purely conditional, artificial pronouns earlier suggested such as "e, et, mon, na, ne, po, se, tey").
+#"Hu" is a short, one syllable word. The use of "hu" (2 keystrokes) cuts effectively the time needed to type "he or she" (9 keystrokes); cf. "huself" (6)  and "himself or herself," (18) etc. This is a substantial economy of time, space, and effort in our frequent daily use of gender-neutral pronouns, especially in e-mails.
+# "Hu" fits the pattern of existing 3rd person pronouns ("he" and "she"), first, by including the  consonant "h" common to all of them; second, by containing only one vowel, like all of them.  "Hu - he - she" - these words, all open syllables, one consonant plus one vowel, are good partners in distributing the gender roles within one lexical family. # The spelling of "hu" coincides with its pronunciation; there are no irregularities of the k ind that damages, for example, the "s/he" pronoun, making it good in writing but unpronouncible.
+# "Hu" is used in a regular grammatical manner, in contrast to "they." "Hu" can be used automatically, without twisting the sentence to put all nouns in plu ral or exploiting "they" in a disagreeable manner to refer to a singular person.
+# It is easy to form derivatives from "hu" following the existing patterns:  "hus," "hu" ("hum"), and "huself". # If we decide to borrow a gender-neutral pronoun from ano ther language, we'll have to consider the Persian "u," Arabic "hu" and Old English "ou." All of them could be easily incorporated in contemporary English with the addition or preservation of "h", as a shortened form of the genderless "human". It is also noteworthy that some modern-day languages, such as [[Finnish]], use only gender-neutral 3rd person pronouns.
 
-So far, I d on't see any strong logical or histori cal
-arguments against hu-language. Its advantages over other
-contenders are too obvious to ignore.
+So far, I don't see any strong logical or historical arguments against hu-language. Its advantages over other contenders are too obvious to ignore.
 
-I acknowledge, however, that language rarely is guided by logic or even by 
-historical parallels and precedents. Wor ds have their own  magic, and, like 
-bo oks, have their fate. I feel this magic and potential
-in the "hu" language. It is the language of undivided HUmanness.
+I acknowledge, however, that language rarely is guided by logic or even by historical parallels and precedents. Words have their own magic, and, like  books, have their fate. I feel this magic and potential in the "hu" language. It is the language of undivided HUmanness.
 
-In the near future, this HUmaness will need even better articulation to 
-distinguish our specie s from artificial "it" forms of intellig ence that are 
-rising to a more active role in civilization and language. Soon we'll have to 
-answer such  questions as "Who is reading, writing, calculating, speaking, even 
-thinking?" The answer may be "hu" (huma n) or "it" (machine). We need "hu" not 
-o nly to speak equally about men and women, but in order to speak differently 
-about humans and non-humans who share with us many similar
-qualities and predicates and fulfill many comparable tasks.
-We increasingly n eed "hu" as a sign of a humanly specific
-a ctor or agent in the language of mental actions and symbolical
-interactions.
+In the near future, this HUmaness will need even better articulation to distinguish our species from artificial "it" forms of intelligence that are  rising to a more active role in civilization and language. Soon we'll have to answer such questions as "Who is reading, writing, calculating, speaking, even thinking?" The answer may be "hu" (human) or "it" (machine). We need "hu" not only to speak equally about men and women, but in order to speak differently about humans and non-humans who share with us many similar qualities and predicates and fulfill many comparable tasks. We increasingly need "hu" as a sign of a humanly specific actor or agent in the language of mental actions and symbolical interactions.
 
-In a celebrated episode of "Star Trek: The Next
-Generation," the crew of the Enterprise manages to liberate an
-individual from the hive-like structure of the maleficent Borg
-Collective. They name hum, of course, Hu(gh)!
+In a celebrated episode of "Star Trek: The Next Generation," the crew of the Enterprise manages to liberate an individual from the hive-like structure of the maleficent Borg Collective. They name hum, of course, Hu(gh)!
 
 Coined by [[Mikhail Epstein]].
 
-*See [[Protologism]], [[Neologisms:unstable]]
 {{protologism}}
