fmt; +fr: & it: <took#7709>

--- a/wiki/took.wikitext
+++ b/wiki/took.wikitext
@@ -3,10 +3,11 @@
 *[[SAMPA]]: /tUk/
 
 === Verb ===
-
 '''took'''
 
-# past tense of to [[take]]
+#[[Past tense]] of '''to [[take]]'''.
 
 === Translations ===
-*[[Dutch]]: [[nam]], [[namen]]
+*Dutch: [[nam]], [[namen]]
+*French: [[prit]] (''[[third-person]] [[past historic]]'')
+*Italian: [[prese]] (''[[third-person]] [[past historic]]'')
