/* Translations */ +fi <chalk#7383>

--- a/wiki/chalk.wikitext
+++ b/wiki/chalk.wikitext
@@ -24,6 +24,51 @@ Old English [[cealc]], borrowed from Latin [[calx]] "limestone", borrowed from A
 #[[tailor's chalk]], a chalk-like material used for marking alterations on clothing 
 
 ====Translations====
+'''a soft, white, powdery limestone'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*{{fi}}: [[kalkki]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
+
+'''a piece of chalk mineral used on a blackboard'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*{{fi}}: [[liitu]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
+
+'''tailor's chalk'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
+
+'''Translations to be checked'''
 *[[Breton]]: [[kleiz]] ''m'' (1,2)
 *Bosnian: [[kreda]] ''f''
 *Chinese: [[粉筆]] (fěnbǐ)
