+fi, formatting <look#5673>

--- a/wiki/look.wikitext
+++ b/wiki/look.wikitext
@@ -10,6 +10,11 @@
 # to perceive with the eye and notice
 
 ====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *Bulgarian: [[поглеждам]]
 *[[Dutch]]: [[kijken]]
 *[[Finnish]]: [[katsoa]]
@@ -17,9 +22,16 @@
 *[[German]]: [[schauen]]
 *{{ga}}: [[feach]]
 *[[Hebrew]]: [[להביט]], [[לראות]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *[[Romanian]]: [[a vedea]], [[a se uita]]
 *[[Spanish]]: [[mirar]]
 *[[Portuguese]]: [[Olhar]]
+|}
+|}
 
 
 ====Related phrases====
@@ -32,12 +44,26 @@
 # The way someone or something looks
 
 ====Translations====
+'''the way something looks'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *Bulgarian: [[външност]] ''f''
 *[[Dutch]]: [[uitzicht]] ''n'', look ''m''
+*{{fi}}: [[ulkonäkö]]
 *[[German]]: [[Aussehen]] ''n''
 *[[Hebrew]]: [[מראה]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *[[Romanian]]: [[aspect]] ''n''
 *[[Spanish]]: [[aspecto]] ''m''
+|}
+|}
 
 ----
 
