--- a/wiki/topo.wikitext
+++ b/wiki/topo.wikitext
@@ -1,20 +1,25 @@
 ==English==
 ===Noun===
-A pencil and paper game of drawing and scoring curves.
+'''topo'''
+
+#A pencil and paper game of drawing and scoring curves.
+
+----
 ==Italian==
 ===Noun===
-'''topo''' ''m'' (diminutive: [[topolino]])
+'''topo''' ''m'' (''plural'' '''topi''', ''diminutive'' '''[[topolino]]''')
 
-# [[mouse]] or [[rat]]<!-- only one sense but two English translations - do not separate -->
+<!--Keep these translations separate, as "mouse" and "rat" are not synonyms in English-->
+#[[mouse]]
+#[[rat]]
 
 ====Synonyms====
-*[[ratto]] (''rat only'')
-*[[sorcio]]
+*(''mouse''): [[sorcio]]
+*(''rat''): [[ratto]]
 
-====Translations====
-*English: [[mouse]], [[rat]]
-*Japanese: [[鼠]] (ねずみ, nezumi)
-
+----
 ==Spanish==
 ===Noun===
-#[[mole]] (the animal)
+'''topo''' ''m'' (''plural'' '''topos''')
+
+#[[mole]] (''the animal'')
