--- a/wiki/incense.wikitext
+++ b/wiki/incense.wikitext
@@ -16,7 +16,7 @@
 *{{ru}}: [[ладан]] ''m''
 
 ===Verb===
-'''to incense''' ([[incensed]], incensed)
+'''to cense''' ([[censed]], censed)
 
 ====Translations====
 *Dutch: [[wieroken]]
