--- a/wiki/topolino.wikitext
+++ b/wiki/topolino.wikitext
@@ -1,6 +1,6 @@
 ==Italian==
 ===Noun===
-'''topolino''' ''m'' (''plural'' '''topolini'')
+'''topolino''' ''m'' (''plural'' '''topolini''')
 
 #Diminutive of '''[[topo]]'''.
 
