--- a/wiki/castling.wikitext
+++ b/wiki/castling.wikitext
@@ -8,6 +8,11 @@
 #(''[[Chess]]'') A move in which the [[king]] moves two squares towards a [[rook]], and the rook moves to the other side of the king.
 
 ==== Translations ====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *Czech: [[rošáda]]
 *Dutch: [[rokade]] ''f''
 *[[Esperanto]]: [[aroko]]
@@ -16,6 +21,11 @@
 *German: [[Rochade]] ''f''
 *Hungarian: [[sáncolás]]
 *Italian: [[arrocco]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Latvian: [[rokāde]]
 *Polish: [[roszada]] ''f''
 *Russian: [[рокировка]]
@@ -23,6 +33,8 @@
 *Slovenian: [[rošada]] ''f''
 *Spanish: [[enroque]] ''m''
 *Swedish: [[rockad]]
+|}
+|}
 
 ===See also===
 *[[w:Castling|Wikipedia article on castling]]
