checked fi <cook#7875>

--- a/wiki/cook.wikitext
+++ b/wiki/cook.wikitext
@@ -12,6 +12,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Finnish: [[keittää]], [[laittaa ruokaa]]
 *French: [[cuire]]
 *Italian: [[cuocere]]
 |}
@@ -43,6 +44,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Finnish: [[keittää]], [[laittaa ruokaa]]
 *French: [[cuisiner]]
 *Italian: [[cucinare]]
 |}
@@ -59,6 +61,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Finnish: [[kypsyä]]
 *French: [[cuire]]
 *Italian: [[cuocere]]
 |}
@@ -89,7 +92,6 @@
 The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.  The translations might be for the transitive or the intransitive verb, or for both.  The numbering is unreliable.
 
 *Dutch: [[koken]] (1,2)
-*Finnish: [[keittää]] (1), [[kypsentää]] (2), [[laittaa ruokaa]] (2)
 *Indonesian: [[masak|memasak]]
 *Japanese: [[料理]]する ([[りょうり]]する, ryōri-suru)
 
