--- a/wiki/algorithm.wikitext
+++ b/wiki/algorithm.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-From the name of the Arab mathematician [[w:al-Khwarizmi|al-Khwarizmi]]
+A [[corruption]] of the name of the Arab mathematician [[w:al-Khwarizmi|al-Khwarizmi]]
 
 ===Noun===
 '''algorithm''' (''plural'' '''algorithms''')
@@ -15,6 +15,7 @@ From the name of the Arab mathematician [[w:al-Khwarizmi|al-Khwarizmi]]
 {|
 <!--languages from A to I go here-->
 *Finnish: [[algoritmi]]
+*French: [[algorithme]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
