--- a/wiki/gladiator.wikitext
+++ b/wiki/gladiator.wikitext
@@ -14,6 +14,10 @@ From Latin [[gladius]] : sword
 *2. A [[combatant]] who fought against '''wild beasts''' in a Roman amphitheater.
 
 
+==Synonyms==
+
+*''Definition 1.'' : [[prizefighter]]
+*''Definition 2''. : [[beastmaster]]
 
 ==Translations==
 
