Translations +Latin <thief#38280>

--- a/wiki/thief.wikitext
+++ b/wiki/thief.wikitext
@@ -1,9 +1,10 @@
 ===Noun===
 '''thief''' (Plural: [[thieves]])
 
-#one who carries out [[theft]], a [[robber]], a [[pickpocket]]
+#one who carries out [[theft]]; a [[robber]], a [[pickpocket]]
 
 ====Translations====
 *Dutch: [[dief]] ''m'', [[dievegge]] ''f''
+*Latin: [[fur]], ''m/f''
 *Spanish: [[ladrón]] ''m''
 *Swedish: [[tjuv]] ''c''
