--- a/wiki/fur.wikitext
+++ b/wiki/fur.wikitext
@@ -1,10 +1,44 @@
 ==English==
 === Noun ===
 '''fur'''
-# hairy skin of an animal processed to be a suitable wear to cover human nakedness and protect humas from the cold
+# Hairy skin of an animal processed to be a suitable wear to cover human nakedness and to protect humans from the cold.
 ==== Translations ====
 *{{fi}}: [[turkki]], [[turkis]]
 *{{sk}}: [[kožušina#Slovak|kožušina]] ''f''
 
 === Derived Words ===
 * [[fur coat]]
+
+==Latin==
+===Noun===
+'''f&#363;r''', ''masculine or feminine''
+# Thief.
+
+====Declension====
+Third declension.
+
+{| cellpadding="5" border="2"
+! ''Case / #''
+! ''M.F.''
+! ''MM.FF.''
+|-
+! ''Nominative''
+| <big>f&#363;r
+| <big>f&#363;r&#275;s
+|-
+! ''Genitive''
+| <big>f&#363;ris
+| <big>f&#363;rum
+|-
+! ''Dative''
+| <big>f&#363;r&#299;
+| <big>f&#363;ribus
+|-
+! ''Accusative''
+| <big>f&#363;rem
+| <big>f&#363;r&#275;s
+|-
+! ''Ablative''
+| <big>f&#363;re
+| <big>f&#363;ribus
+|}
