/* Declension */ Table format. <fur#51903>

--- a/wiki/fur.wikitext
+++ b/wiki/fur.wikitext
@@ -18,27 +18,27 @@
 Third declension.
 
 {| cellpadding="5" border="2"
-! ''Case / #''
-! ''M.F.''
-! ''MM.FF.''
+!style="background:#47DCF8"| ''Case / #''
+!style="background:#F1BC4E"| ''M.F.''
+!style="background:#F1BC4E"| ''MM.FF.''
 |-
-! ''Nominative''
+!style="background:#F1BC4E"| ''Nominative''
 | <big>f&#363;r
 | <big>f&#363;r&#275;s
 |-
-! ''Genitive''
+!style="background:#F1BC4E"| ''Genitive''
 | <big>f&#363;ris
 | <big>f&#363;rum
 |-
-! ''Dative''
+!style="background:#F1BC4E"| ''Dative''
 | <big>f&#363;r&#299;
 | <big>f&#363;ribus
 |-
-! ''Accusative''
+!style="background:#F1BC4E"| ''Accusative''
 | <big>f&#363;rem
 | <big>f&#363;r&#275;s
 |-
-! ''Ablative''
+!style="background:#F1BC4E"| ''Ablative''
 | <big>f&#363;re
 | <big>f&#363;ribus
 |}
