decapitalised "form" <Backus-Naur form#64584>

--- a/wiki/Backus-Naur_form.wikitext
+++ b/wiki/Backus-Naur_form.wikitext
@@ -1,6 +1,5 @@
 ==English==
+===Noun phrase===
+'''Backus-Naur form'''
 
-===Noun Phrase===
-'''Backus-Naur Form'''
-
-# (''computing'') A formal notation for [[context-free grammar]]s.
+#(''computing'') A formal [[notation]] for [[context-free grammar]]s.
