--- a/wiki/Backus-Naur_form.wikitext
+++ b/wiki/Backus-Naur_form.wikitext
@@ -2,4 +2,4 @@
 ===Noun phrase===
 '''Backus-Naur form'''
 
-#(''computing'') A formal [[notation]] for [[context-free grammar]]s.
+#(''computing'') A formal [[notation]] for [[context-free grammar]]s.  Abbreviation: [[BNF]]
