--- a/wiki/BNF.wikitext
+++ b/wiki/BNF.wikitext
@@ -1,7 +1,6 @@
 ==English==
-
-===Acronym===
+===Abbreviation===
 '''BNF'''
 
-# (''computing'') [[Backus-Naur Form]] (originally Backus Normal Form).
-#: ''Could we write BNF for this instead of trying to describe it in text?''
+#(''computing'') [[Backus-Naur form]] (originally '''Backus normal form''').
+#:''Could we write BNF for this instead of trying to describe it in text?''
