--- a/wiki/Backus-Naur_form.wikitext
+++ b/wiki/Backus-Naur_form.wikitext
@@ -3,3 +3,6 @@
 '''Backus-Naur form'''
 
 #(''computing'') A formal [[notation]] for [[context-free grammar]]s.  Abbreviation: [[BNF]]
+
+====Synonyms====
+*[[Backus normal form]] (''obsolete'')
