<Backus normal form#64614>

--- a/wiki/Backus_normal_form.wikitext
+++ b/wiki/Backus_normal_form.wikitext
@@ -2,4 +2,4 @@
 ===Noun phrase===
 '''Backus normal form'''
 
-#A now obsolete name for '''[[Backus-Naur form]]'''.
+#(''obsolete'') [[Backus-Naur form]].
