acronym -> abbreviation; fmt <DFA#64599>

--- a/wiki/DFA.wikitext
+++ b/wiki/DFA.wikitext
@@ -1,3 +1,5 @@
 ==English==
-===Acronym===
-*[[Deterministic Finite-state Automaton]]
+===Abbreviation===
+'''DFA'''
+
+#[[Deterministic finite-state automaton]].
