Declension & related words. <furtivum#64612>

--- a/wiki/furtivum.wikitext
+++ b/wiki/furtivum.wikitext
@@ -5,3 +5,41 @@
 ===Adjective===
 ('''f&#363;rt&#299;vus''', '''f&#363;rt&#299;va''', '''f&#363;rt&#299;vum''')
 # Secret.
+
+====Declension====
+First and second declensions.
+
+{| cellpadding="5" border="1"
+!style="background:#47DCF8;"|  ''Case <br> <math> \downarrow </math> ''
+!style="background:#47DCF8;"| ''Gender & N<sup>o</sup>'' <math> \rightarrow </math> 
+!style="background:#F1BC4E;"| ''M.''
+!style="background:#F1BC4E;"| ''F.''
+!style="background:#F1BC4E;"| ''N.''
+!style="background:#F1BC4E;"| ''MM.''
+!style="background:#F1BC4E;"| ''FF.''
+!style="background:#F1BC4E;"| ''NN.''
+|-
+!colspan=2 style="background:#F1BC4E;"| ''Nominative''
+| <big> f&#363;rt&#299;vus </big> || <big> f&#363;rt&#299;va </big>|| <big> f&#363;rt&#299;vum</big>
+| <big>f&#363;rt&#299;v&#299;</big> || <big>f&#363;rt&#299;vae</big> || <big>f&#363;rt&#299;va</big>
+|-
+!colspan=2 style="background:#F1BC4E;"| ''Genitive''
+| <big>f&#363;rt&#299;v&#299;</big> || <big>f&#363;rt&#299;vae</big> || <big>f&#363;rt&#299;v&#299;</big>
+| <big>f&#363;rt&#299;v&#333;rum || <big>f&#363;rt&#299;v&#257;rum ||<big>f&#363;rt&#299;v&#333;rum</big>
+|-
+!colspan=2 style="background:#F1BC4E;"| ''Dative''
+| <big>f&#363;rt&#299;v&#333; || <big>f&#363;rt&#299;vae || <big>f&#363;rt&#299;v&#333;
+| <big>f&#363;rt&#299;v&#299;s || <big>f&#363;rt&#299;v&#299;s || <big>f&#363;rt&#299;v&#299;s
+|-
+!colspan=2 style="background:#F1BC4E;"| ''Accusative''
+| <big>f&#363;rt&#299;vum || <big>f&#363;rt&#299;vam || <big>f&#363;rt&#299;vum
+| <big>f&#363;rt&#299;v&#333;s || <big>f&#363;rt&#299;v&#257;s || <big>f&#363;rt&#299;va
+|-
+!colspan=2 style="background:#F1BC4E;"| ''Ablative''
+| <big>f&#363;rt&#299;v&#333; || <big>f&#363;rt&#299;v&#257; || <big>f&#363;rt&#299;v&#333;
+| <big>f&#363;rt&#299;v&#299;s || <big>f&#363;rt&#299;v&#299;s || <big>f&#363;rt&#299;v&#299;s
+|}
+
+====Related words====
+*[[fur]]
+*[[furtim]]
