--- a/wiki/GC.wikitext
+++ b/wiki/GC.wikitext
@@ -1,5 +1,7 @@
 ==English==
-===Acronym===
-*[[garbage collect]],
-*[[garbage collection]] or
-*[[garbage collector]]
+===Abbreviation===
+'''GC'''
+
+#[[garbage collect]]
+#[[garbage collection]]
+#[[garbage collector]]
