+"computing" label <GC#64598>

--- a/wiki/GC.wikitext
+++ b/wiki/GC.wikitext
@@ -2,6 +2,6 @@
 ===Abbreviation===
 '''GC'''
 
-#[[garbage collect]]
-#[[garbage collection]]
-#[[garbage collector]]
+#(''computing'') [[garbage collect]]
+#(''computing'') [[garbage collection]]
+#(''computing'') [[garbage collector]]
