--- a/wiki/cruise.wikitext
+++ b/wiki/cruise.wikitext
@@ -4,6 +4,9 @@
 ===Translation===
 *German: [[Kreuzfahrt]] ''f'' (1)
 *Spanish: [[crucero]] ''m''
+*{{fr}}: [[croisière]]
+*Dutch: [[cruise]]
+*Italian: [[crociera]]
 ==Verb==
 # to sail
 # (<i>slang</i>) to drive around without goal
