--- a/wiki/cantar.wikitext
+++ b/wiki/cantar.wikitext
@@ -11,6 +11,7 @@
 *Indonesian: [[nyanyi|bernyanyi]] / [[nyanyi|menyanyi]] (of person), [[kicau|berkicau]] (of bird)
 *Italian: [[cantare]]
 *Japanese: [[歌う]] ([[うたう]], utau) (of person), [[鳴く]] ([[なく]], naku) (of bird)
+*Latin: [[canere]]
 *Romanian: [[cânta]]
 *[[Tok Pisin]]: [[singsing]]
 
