change "intensive verb" to "frequentative" <cantare#47627>

--- a/wiki/cantare.wikitext
+++ b/wiki/cantare.wikitext
@@ -1,5 +1,5 @@
 ==Etymology==
-Intensive verb formed from ''[[cantus]]'', perfect passive participle of ''[[canere]]'', '''sing'''
+Latin, [[frequentative]] of ''[[canere]]''.
 
 ==Italian==
 ===Verb===
