--- a/wiki/Mexico.wikitext
+++ b/wiki/Mexico.wikitext
@@ -3,8 +3,8 @@
 ===Proper noun===
 '''Mexico'''
 
-# Country in North America. Official name: Estados Unidos Mexicanos (United Mexican States).
-# An alternative name for [[Mexico City]].
+# Country in North America. Official name: Estados Unidos Mexicanos (United Mexican States). Independant since 1821.
+# An alternative name for [[Mexico City]] (Ciudad de México).
 
 ====Alternate Spelling====
 *[[Mejico]] (considered improper)
