def -> translations <cwm#19015>

--- a/wiki/cwm.wikitext
+++ b/wiki/cwm.wikitext
@@ -1,5 +1,18 @@
+==English==
+===Etymology===
+Welsh
+
+===Noun===
+'''cwm''' (''plural'' '''cwms''')
+
+#A steep, [[bowl]]-shaped [[hollow]] in a [[hill]] or [[mountain]].
+
+====Synonyms====
+*[[corrie]], [[cirque]]
+
+----
 ==Welsh==
 ===Noun===
 '''cwm'''
 
-# A steep, [[bowl]]-shaped [[hollow]] in a [[hill]] or [[mountain]]
+#[[cirque]], [[corrie]]
