fmt; add level-2 heading <eng#21337>

--- a/wiki/eng.wikitext
+++ b/wiki/eng.wikitext
@@ -1,12 +1,12 @@
-*''Latin-based letter:'' '''ŋ'''
-
+==Roman alphabet==
 ===Pronunciation===
 *[[SAMPA]]: /EN/
 *[[International Phonetic Alphabet|IPA]]: /ɛŋ/
 
 ===Noun===
 '''eng''' (''plural'' '''engs''')
-:(''orthography'') The Latin-based letter formed by combining the letters ''n'' and ''g'', used in the [[International Phonetic Alphabet|IPA]], [[w:Saami|Saami]], [[w:Mende|Mende]], ans some Australian aboriginal languages. In the IPA, it represents the voiced velar nasal, the ''ng'' sound in [[running|runni'''ng''']] and [[rink|ri'''n'''k]].
+
+:(''orthography'') [[ŋ]]: The Latin-based letter formed by combining the letters ''n'' and ''g'', used in the [[International Phonetic Alphabet|IPA]], [[w:Saami|Saami]], [[w:Mende|Mende]], ans some Australian aboriginal languages. In the IPA, it represents the voiced velar nasal, the ''ng'' sound in [[running|runni'''ng''']] and [[rink|ri'''n'''k]].
 
 ----
 ==Dutch==
