a 1st attempt at formatting but more work needed please <שמר#25496>

--- a/wiki/%D7%A9%D7%9E%D7%A8.wikitext
+++ b/wiki/%D7%A9%D7%9E%D7%A8.wikitext
@@ -1,16 +1,12 @@
 This is a begining of a trial to find a proper format of hebrew entries.
 
-==[[Hebrew]]==
+==Hebrew==
+===Verb===
+'''שמר'''
 
-===[[verb]]===
+# to [[guard]]
 
-====[[definition]]====
-to guard
-
-====translations====
-
-
-===root===
+===Root===
 
 [[שמר]] - בניין קל
 
