add leve-2 heading; entry for french needed; link to cyrillic homograph <Ë#54519>

--- a/wiki/%C3%8B.wikitext
+++ b/wiki/%C3%8B.wikitext
@@ -1,5 +1,7 @@
+==Roman alphabet==
 ===Letter===
 '''Ë''' '''ë'''
 
 #The 8th letter of the [[Albanian]] alphabet, preceded by [[E]] and followed by [[F]], and representing /ə/.
+
 [[Category:Latin letters|E]]
