fmt <Condé-sur-Sarthe#19000>

--- a/wiki/Cond%C3%A9-sur-Sarthe.wikitext
+++ b/wiki/Cond%C3%A9-sur-Sarthe.wikitext
@@ -1,1 +1,5 @@
-Small town near [[Alençon]] in France
+==French==
+===Noun===
+'''[[Condé]]-[[sur]]-[[Sarthe]]'''
+
+# Small town near [[Alençon]] in France
