--- a/wiki/errata.wikitext
+++ b/wiki/errata.wikitext
@@ -1,5 +1,8 @@
+==English==
+===Noun===
+'''errata'''
 #An added page in a printed work where errors which are discovered after printing and their corrections are listed.
 #A page with a listing of such corrections ([[corrigenda]]).
 
 ==== Translations ====
-*Dutch: [[errata]]
+*Dutch: errata
