--- a/wiki/burke.wikitext
+++ b/wiki/burke.wikitext
@@ -12,3 +12,8 @@
 '''to burke''' (''[[present participle]]'' '''burking''', ''[[past tense]] and [[past participle]]'' '''burked''')
 
 # To murder by suffocation, or as to produce few marks of violence, for the purpose of obtaining a body to be sold for dissection.
+
+===Noun===
+'''burke''' (''plural'' '''burkes''')
+
+#(''British'') Variant spelling of [[berk]].
