+slang label to n <burke#52605>

--- a/wiki/burke.wikitext
+++ b/wiki/burke.wikitext
@@ -16,4 +16,4 @@
 ===Noun===
 '''burke''' (''plural'' '''burkes''')
 
-#(''British'') Variant spelling of [[berk]].
+#(''British slang'') Variant spelling of [[berk]].
