--- a/wiki/bibo.wikitext
+++ b/wiki/bibo.wikitext
@@ -64,3 +64,39 @@ biberat : ''he/she/it had drunk'' <br>
 biber&#257;mus : ''we had drunk'' <br>
 biber&#257;tis : ''you (all) had drunk'' <br>
 biberant : ''they had drunk'' <br>
+
+=====<u>''Present Subjunctive''</u>=====
+bibam : ''I may drink'' <br>
+bib&#257;s : ''you may drink'' <br>
+bibat : ''he/she/it may drink'' <br>
+:&mdash; <br>
+bib&#257;mus : ''we may drink'' <br>
+bib&#257;tis : ''you (all) may drink'' <br>
+bibant : ''they may drink'' <br>
+
+=====<u>''Imperfect Subjunctive''</u>=====
+biberem : ''maybe I was drinking'' <br>
+biber&#275;s : ''maybe you were drinking'' <br>
+biberet : ''maybe he/she/it was drinking'' <br>
+:&mdash; <br>
+biber&#275;mus : ''maybe we were drinking'' <br>
+biber&#275;tis : ''maybe you (all) were drinking'' <br>
+biberent : ''maybe they were drinking'' <br>
+
+=====<u>''Perfect Subjunctive''</u>=====
+biberim : ''I may have drunk'' <br>
+biber&#299;s : ''you may have drunk'' <br>
+biberit : ''he may have drunk'' <br>
+:&mdash; <br>
+biber&#299;mus : ''we may have drunk'' <br>
+biber&#299;tis : ''you (all) may have drunk'' <br>
+biberint : ''they may have drunk'' <br>
+
+=====<u>''Pluperfect Subjunctive</u>=====
+bibissem : ''maybe I had drunk'' <br>
+bibiss&#275;s : ''maybe you had drunk'' <br>
+bibisset : ''maybe he had drunk'' <br>
+:&mdash; <br>
+bibiss&#275;mus : ''maybe we had drunk'' <br>
+bibiss&#275;tis : ''maybe you (all) had drunk'' <br>
+bibissent : ''maybe they had drunk'' <br>
