--- a/wiki/stupid.wikitext
+++ b/wiki/stupid.wikitext
@@ -3,6 +3,8 @@
 ===Adjective===
 '''stupid'''
 
+1. Lacking intelligence
+2. Intelligence equivalent to George W. Bush
 ====Derived terms====
 *[[stupidity]]
 *[[stupidly]]
