/* Translations */ +la: manatus ''m'' <manatee#38148>

--- a/wiki/manatee.wikitext
+++ b/wiki/manatee.wikitext
@@ -25,6 +25,7 @@ Spanish [[manatí]], from a [[Carib]] language.
 *French: [[lamantin]] ''m''
 *German: [[Manati]]
 *Japanese: [[マナティ]] ([[まなてぃ]], manati)
+*Latin: [[manatus]] ''m''
 *Polish: [[manat]]
 *Spanish: [[manatí]] ''m''
 
