--- a/wiki/bag_lady.wikitext
+++ b/wiki/bag_lady.wikitext
@@ -1,4 +1,4 @@
 ==English==
 
 ===Noun Phrase===
-(''colloquial'') A [[homeless]] woman who carries her possessions with her in a bag.
+# (''colloquial'') A [[homeless]] woman who carries her possessions with her in a bag.
