--- a/wiki/bag_lady.wikitext
+++ b/wiki/bag_lady.wikitext
@@ -1,4 +1,6 @@
 ==English==
 
 ===Noun Phrase===
+'''bag lady'''
+
 # (''colloquial'') A [[homeless]] woman who carries her possessions with her in a bag.
