--- a/wiki/glass.wikitext
+++ b/wiki/glass.wikitext
@@ -22,6 +22,7 @@ It is possible that ultimate root is from a variant of the Old Teutonic word ''g
 *French: [[verre]] ''m''
 *German: Glas [[:de:Glas|(de)]] ''n''
 * {{ga}}: [[gloine]] ''f4''
+*Hebrew: [[זכוכית]] ''f''
 *Italian: [[vetro]] ''m''
 *Japanese: [[ガラス]] (garasu, [[硝子]])
 *Polish: [[szkło]] ''n''
@@ -48,6 +49,7 @@ It is possible that ultimate root is from a variant of the Old Teutonic word ''g
 *French: verre [[:fr:verre|(fr)]] ''m''
 *German: Glas [[:de:Glas|(de)]] ''n''
 *{{ga}}: [[gloine]] ''f4''
+*Hebrew: [[כוס]] ''f''
 *Italian: [[bicchiere]] ''m''
 *Japanese: [[グラス]] (gurasu)
 *Polish: [[szklanka]] ''f'', [[kieliszek]] ''m'' (''for alcoholic drinks'')
