--- a/wiki/toilet.wikitext
+++ b/wiki/toilet.wikitext
@@ -29,7 +29,7 @@ From French ''[[toilette]]''.
 *Japanese: [[トイレ]] (toire), [[便所]] ([[べんじょ]], benjo)
 *Spanish: [[excusado]] ''m'', [[retrete]] ''m'', [[water]] ''m'', [[baño]] ''m''
 *Polish: [[toaleta]] ''f'', [[ubikacja]] ''f''
-*Portuguese: [[vaso sanitário]] ''m'', [[privada]] ''f''; [[banheiro]] ''m'' (2, 3)
+*Portuguese: [[casa de banho]] ''f'' (Portugal), [[vaso sanitário]] ''m'', [[privada]] ''f''; [[banheiro]] ''m'' (2, 3)
 *[[Tagalog]]: [[inidoro]]
 *[[Volapük]]: [[tvalet]]
 *Turkish: [[tuvalet]]
