--- a/wiki/monitor.wikitext
+++ b/wiki/monitor.wikitext
@@ -16,6 +16,7 @@ From Latin '''[[monitor]]''', '''[[warner]]''', from perfect passive participle 
 *[[Dutch]]: (3) [[monitor]], [[beeldscherm]]
 *[[Finnish]]: [[monitori]], [[näyttö]], [[näyttöpääte]]
 *[[Latin]]: [[monitor]] ''m''
+*[[Portuguese]]: monitor ''m'' 
 *[[Serbian]]: [[ekran]] ''m''
 
 ===Transitive verb===
