--- a/wiki/airport.wikitext
+++ b/wiki/airport.wikitext
@@ -7,6 +7,8 @@
 ====Translations====
 *Bulgarian: [[летище]] (letishte)
 *Chinese: [[飞机场]] (fei1ji1chang3)
+*Deutsch: [[Flughafen]] ''m''
 *Macedonian: [[аеродром]] (aerodrom)
+*Portuguese: [[aeroporto]] ''m''
 
 {{stub}}
