--- a/wiki/would.wikitext
+++ b/wiki/would.wikitext
@@ -23,6 +23,10 @@
 
 Historically, '''would''' is the past tense of '''[[will]]'''.
 
+====Synonyms====
+*(''indicating an action in the past that happened repeatedly or commonly''): [[used to]]
+*(''used to express a polite request''): [[be so good as to]], [[kindly]], [[please]]
+
 ====Translations====
 
 *''Note: many languages express some meanings of '''would''' using a [[mood]] or [[tense]] rather than by a particular word.''
