--- a/wiki/veuillez.wikitext
+++ b/wiki/veuillez.wikitext
@@ -2,5 +2,5 @@
 ===Imperative===
 '''veuillez'''
 
-#(''formal [[imperative]] of'' '''[[vouloir]]''') [[please]], [[would]] (''used to make polite requests''), [[be so kind as to]], ''etc''
+#(''formal [[imperative]] of'' '''[[vouloir]]''') [[please]], [[would]] (''used to make polite requests''), [[be so kind as to]], [[kindly]], ''etc''
 #:''Veuillez patienter, s'il vous plaît.'' - Please wait ''or'' Would you wait, please ''or'' Be so kind as to wait, please.
