--- a/wiki/kindly.wikitext
+++ b/wiki/kindly.wikitext
@@ -21,7 +21,8 @@
 {|
 <!--Put translations for languages from A to I here-->
 *French: [[gentillement]]
-*Italian: [[gentilmente]]|}
+*Italian: [[gentilmente]]
+|}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
