--- a/wiki/Welsh.wikitext
+++ b/wiki/Welsh.wikitext
@@ -1,7 +1,7 @@
 ==Noun==
 
-# ''pl'' The people of [[Wales]]
-#Language spoken in [[Wales]]
+# ''pl'' People who shag Sheep [[Wales]]
+#Insane western European savage tribe[[Wales]]
 
 ===Translations===
 *[[Breton]]: [[kembraeg]] ''m''
