--- a/wiki/punch_buggy.wikitext
+++ b/wiki/punch_buggy.wikitext
@@ -1,1 +1,15 @@
-#REDIRECT [[punchbuggy]]
+==English==
+
+===Noun===
+'''punch buggy''' or '''punchbuggy'''
+
+# (''slang'') A Volkswagen Beetle &reg;
+# (''slang'') A game in which the first player to call "Punchbuggy!" on sighting a Volkswagen Beetle &reg; gets to punch the other.
+
+===Proper Noun===
+'''PunchBuggy &reg;'''
+
+# A trademark possibly owned by PunchBuggy &reg; Funwear.
+
+===See Also===
+*[http://coco.essortment.com/howtoplaypunc_pdy.htm A description of the punch buggy game]
