Tightened defn, more detailed examples, singular throughout <false friend#153>

--- a/wiki/false_friend.wikitext
+++ b/wiki/false_friend.wikitext
@@ -1,10 +1,11 @@
 ===Idiomatic expression===
 '''[[false]] [[friend]]'''
 
-#False friends are pairs of words in two languages that look or sound similar but differ in meaning. Such words can cause difficulty for students learning a foreign language because the students are likely to misidentify the words based on knowledge of their native language.
+# A word in a foreign language bearing a deceptive resemblence to a word in one's own language.
 
 ===Examples===
-#The German word 'will' and the English word 'will'
+#The German word ''will'' (want) is not a future tense marker &mdash; "Ich will gehen" means "I want to go," not "I will go."
+#The Spanish word ''embarazada'' means "pregnant", not "embarrassed" &mdash; "Soy embarazada" means "I am pregnant," not "I am embarrassed."
 
 ====Translations====
 *French: [[faux-amis]] ''m, pl''
