Corrected examples, +usage note (attendre and attend are -- obviously -- true cognates) <false cognate#46243>

--- a/wiki/false_cognate.wikitext
+++ b/wiki/false_cognate.wikitext
@@ -1,9 +1,17 @@
 ==English==
-===Noun===
+===Noun Phrase===
 '''[[false]] [[cognate]]''' (''plural'' '''false cognates''')
 
-#One of a pair of similar or identical words that are commonly believed to be [[cognate]]s but are in fact unrelated.
-#:''The French "attendre" and the English "attend" are false cognates - "attendre" means "to wait", while the French for "to attend" is "assister à".''
+# A word that appears to be [[cognate]] to a given word but is in fact unrelated.
+
+===Examples===
+# The word for "dog" in the Australian Aboriginal language Mbabaram happens to be ''dog''.
+# The Korean word for "two" happens to be ''tu''.
+# Many completely unrelated languages use some variant of ''ma'' for "mother".
+
+===Usage Note===
+
+False cognates are much rarer than [[false friend]]s, and the term ''false cognate'' is sometimes misapplied to false friends.  For example French ''attendre'' and English ''attend'' are true cogantes derived from the same Latin roots, but false friends, having evolved distinct meanings.  However, an earlier version of this article cited them as false cognates.
 
 ===See also===
 *[[false friend]]
