Cleanup, noted that cognates are not necessarily from different languages <cognate#46204>

--- a/wiki/cognate.wikitext
+++ b/wiki/cognate.wikitext
@@ -1,18 +1,25 @@
-===Noun===
-'''cognate''' ([[cognates]])
-
-#words of different languages that are related, that is they have a common etymology.
-#:Example: 
-#:English ''celebration'' and Spanish ''celebraci&oacute;n''
-
-====Derived terms====
-*[[false cognate]]
+==English==
 
 ===Adjective===
 '''cognate''' (no comparative or superlative forms)
 
-# a cognate of
-#:"celebraci&oacute;n" is cognate with "celebration".
+# Derived from the same roots.
+#: In English ''ward'' is cognate to ''guard'', and both are cognate to French ''garder''.
+#: English ''ward'', English ''guard'', and French ''garder'' are all cognate.
+
+
+===Noun===
+'''cognate'''
+
+# A word derived from the same roots as a given word.  Generally used in plural.
+#: English ''ward'' is a cognate of ''guard'', and of French ''garder''.
+#: English ''ward'', English ''guard'', and French ''garder'' are all cognates.
+
+====Derived terms====
+*[[false cognate]]
 
 ===See also===
+*[[derivation]]
+*[[etymology]]
+*[[root]]
 *[[w:en:cognate|Wikipedia article on cognates]]
