--- a/wiki/false_cognate.wikitext
+++ b/wiki/false_cognate.wikitext
@@ -11,7 +11,7 @@
 
 ===Usage Note===
 
-False cognates are much rarer than [[false friend]]s, and the term ''false cognate'' is sometimes misapplied to false friends.  For example French ''attendre'' and English ''attend'' are true cogantes derived from the same Latin roots, but false friends, having evolved distinct meanings.  However, an earlier version of this article cited them as false cognates.
+False cognates are much rarer than [[false friend]]s, and the term ''false cognate'' is sometimes misapplied to false friends.  For example French ''attendre'' and English ''attend'' are true cogantes derived from the same Latin roots, but false friends, their meanings having diverged. However, an earlier version of this article cited them as false cognates.
 
 ===See also===
 *[[false friend]]
