fmt, +sense <Final Four#40261>

--- a/wiki/Final_Four.wikitext
+++ b/wiki/Final_Four.wikitext
@@ -1,6 +1,9 @@
-== English ==
+==English==
 
-=== Noun ===
+===Noun Phrase===
+'''Final Four'''
 
 # (''basketball, US, colloquial'') The four regional champions of the NCAA Division I tournament, one of whom will become the national champion.
 # (''basketball, US, colloquial'') The final two rounds of the NCAA Division I tournament.
+# (''basketball, US, colloquial'') An appearance in the Final Four.
+#: ''These two teams have an amazing number of Final Fours between them.''
