--- a/wiki/alms.wikitext
+++ b/wiki/alms.wikitext
@@ -1,7 +1,13 @@
-alms
-noun singular & plural
-from Old English almes, almesse, Latin. eleemosyna, 
+==English==
+===Pronunciation===
 
-Something given to the poor as charity (e.g. money, clothing, food, etc).
+===Etymology==
+From Old English almes, almesse, and Latin eleemosyna. 
 
-"She gave $10 weekly as alms for the poor."
+
+===Noun===
+singular & plural
+
+'''alms'''
+#Something given to the poor as charity (e.g. money, clothing, food, etc).
+''She gave $10 weekly as alms for the poor.''
