--- a/wiki/alms.wikitext
+++ b/wiki/alms.wikitext
@@ -1,13 +1,15 @@
 ==English==
 ===Pronunciation===
 
-===Etymology==
+
+
+===Etymology===
 From Old English almes, almesse, and Latin eleemosyna. 
+
 
 
 ===Noun===
 singular & plural
 
 '''alms'''
-#Something given to the poor as charity (e.g. money, clothing, food, etc).
-''She gave $10 weekly as alms for the poor.''
+#Something given to the poor as charity (e.g. money, clothing, food, etc). ''She gave $10 weekly as alms for the poor.''
