--- a/wiki/praise.wikitext
+++ b/wiki/praise.wikitext
@@ -13,9 +13,10 @@
 #[[worship]]
 
 ====Translations====
-*Dutch: [[eerbetoon]]
-*Finnish: [[ylistys]] (1, 2)
-*French: [[louange]]
+*Dutch: eerbetoon
+*Finnish: ylistys (1, 2)
+*French: louange
+*Latin: laudo (to praise)
 
 ====Related terms====
 *[[sing the praises]]
