--- a/wiki/case_badge.wikitext
+++ b/wiki/case_badge.wikitext
@@ -4,4 +4,4 @@
 
 '''case badge''', plural case badges
 
-#A small sticker, usually placed on the front of a PC, stating the name of the company who produced the PC.
+#A small sticker, usually placed on the front of a [[Personal Computer]], stating the name of the company who produced the [[Personal Computer]].
