--- a/wiki/magnum_opus.wikitext
+++ b/wiki/magnum_opus.wikitext
@@ -7,6 +7,7 @@ Examples:
 *[[Johann Wolfgang von Goethe]]'s ''[[Faust]]''
 *[[Georg Friedrich Händel]]'s ''[[The Messiah]]''
 *[[James Joyce]]'s ''[[Ulysses (novel)|Ulysses]]''
+*[[John Philip Sousa]]'s [[The Stars and Stripes Forever]]
 *[[Thomas Samuel Kuhn|Thomas Kuhn]]'s ''[[The Structure of Scientific Revolutions]]''
 *[[Gabriel García Márquez]]'s ''[[One Hundred Years of Solitude]]''
 *[[Pablo Picasso]]'s ''[[Guernica]]''
