add comma <ranula#64653>

--- a/wiki/ranula.wikitext
+++ b/wiki/ranula.wikitext
@@ -1,4 +1,4 @@
 ===Noun===
 '''Ranula''' 
 
-#A small cyst on the floor of the mouth, under the tongue which is associated with an obstruction of the major salivary gland.
+#A small cyst on the floor of the mouth, under the tongue, which is associated with an obstruction of the major salivary gland.
