--- a/wiki/existentialist.wikitext
+++ b/wiki/existentialist.wikitext
@@ -1,12 +1,12 @@
 ==English==
 ===Noun===
-'''existentialist'''
+'''existentialism'''
 
 # A philosophy that emphasizes the uniqueness and isolation of the individual experience in a hostile or indifferent universe, regards human existence as unexplainable, and stresses freedom of choice and responsibility for the consequences of one's acts.--[[User:24.247.193.27|24.247.193.27]] 04:44, 10 Nov 2004 (UTC)
 
 ====Related terms====
 *[[existential]]
-*[[existentialism]]
+*[[existentialist]]
 
 ====Translations====
 *Chinese: [[存在主義者]], [[存在主义者]]
