--- a/wiki/marriage.wikitext
+++ b/wiki/marriage.wikitext
@@ -18,8 +18,7 @@ Middle English '''[[mariage]]''', from Old French '''[[mariage]]''', from '''[[m
 ===Noun===
 '''marriage'''
 # A permanent, legally binding union.
-#: ''The legal restrictions of a marriage union differ depending on the governing bodies restrictions.''
-# A permanent, publicly committed union between two people.
+#: ''The legal restrictions of a marriage, including gender of persons, number of persons, age of persons and other specifications differ depending on the governing bodies chosen restrictions.''
 # A joining of two parts.
 
 ====See also====
