--- a/wiki/guardian_angel.wikitext
+++ b/wiki/guardian_angel.wikitext
@@ -7,5 +7,6 @@
 ====Translations====
 *{{fi}}: [[suojelusenkeli]]
 *{{ja}}: [[守護天使]] (しゅごてんし, shugotenshi)
+*{{nl}}: [[beschermengel]]
 ===See Also===
 *[[w:guardian angel|Wikipedia article on Guardian Angels]]
