/* Translations */ <Kuiper belt#40477>

--- a/wiki/Kuiper_belt.wikitext
+++ b/wiki/Kuiper_belt.wikitext
@@ -11,6 +11,7 @@ Pronunciation notes: ''Kuiper'' is a Dutch surname, so it could be pronounced au
 A region of [[space]] between 30 and 50 [[AU]] from the sun, roughly confined within a thick band around the [[ecliptic]].  This area is populated by many thousands of [[trans-Neptunians]], of which [[Pluto]] is the largest known.
 
 ====Translations====
+*Chinese: 柯伊柏帶
 *Finnish: Kuiperin [[vyöhyke]]
 
 ====References====
