/* Translations */ <Kuiper belt#40477>

--- a/wiki/Kuiper_belt.wikitext
+++ b/wiki/Kuiper_belt.wikitext
@@ -13,6 +13,7 @@ A region of [[space]] between 30 and 50 [[AU]] from the sun, roughly confined wi
 ====Translations====
 *Chinese: 柯伊柏帶
 *Finnish: Kuiperin [[vyöhyke]]
+*Japanese: カイパーベルト
 
 ====References====
 * http://www.ifa.hawaii.edu/faculty/jewitt/kb.html
