--- a/wiki/skive.wikitext
+++ b/wiki/skive.wikitext
@@ -11,3 +11,9 @@
 '''to skive'''
 
 #To pare or shave off the rough or thick parts of (hides or leather).
+
+===Verb===
+
+'''to skive'''
+
+#(UK) To avoid one's assigned work or duty. To slack off.
