/* [[noun]] */ <bit of crumpet#4389>

--- a/wiki/bit_of_crumpet.wikitext
+++ b/wiki/bit_of_crumpet.wikitext
@@ -1,6 +1,6 @@
 == [[noun]] ==
 #''Slang'' for a very sexually desirable woman.
-#:''She's a bit of a crumpet, that one''.
+#:''She's a bit of a [[crumpet]], that one''.
 
 === See also === 
 *[[A piece of crumpet]]
