--- a/wiki/piece_of_crumpet.wikitext
+++ b/wiki/piece_of_crumpet.wikitext
@@ -1,6 +1,6 @@
 == [[noun]] ==
 #''Slang'' for a very sexually desirable woman.
-#:''She's a piece of crumpet, that one''.
+#:''She's a piece of [[crumpet]], that one''.
 
 === See also === 
 *[[A bit of crumpet]]
