--- a/wiki/%E9%BE%8D.wikitext
+++ b/wiki/%E9%BE%8D.wikitext
@@ -1,4 +1,4 @@
-* '''Alternate form''': [[龙]]
+* '''Alternate form''': [[龙]], [[竜]]
 
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 212''': [[Wiktionary:Chinese radical index 龍|龍]]+0 stroke
 
