--- a/wiki/English.wikitext
+++ b/wiki/English.wikitext
@@ -1,5 +1,5 @@
 ===Pronunciation===
-*ĭng'glĭsh, /ˈɪŋglɪʃ/, /"INglIS/123
+*ĭng'glĭsh, /ˈɪŋglɪʃ/, /"INglIS/
 
 ===Noun===
 '''English''', plural [[Englishes]]
