fmt <Peyer's patches#64664>

--- a/wiki/Peyer%27s_patches.wikitext
+++ b/wiki/Peyer%27s_patches.wikitext
@@ -1,3 +1,5 @@
-'''Noun''' 
+==English==
+===Noun===
+'''Peyer's [[patch]]es'''
 
-Patches of lymphoid tissue or lymphoid nodules on the walls of the small intestines.
+#Patches of [[lymphoid]] [[tissue]] or lymphoid [[nodule]]s on the walls of the [[small intestine]].
