--- a/wiki/necrophilia.wikitext
+++ b/wiki/necrophilia.wikitext
@@ -14,7 +14,9 @@ Greek '''nekros'''&mdash;''dead'' + '''filein'''&mdash;''to love'' + '''ia''' (u
 *[[necrophile]]
 
 ==== Translations ====
-*Czech: [[nekrofilie]] ''f''
-*Finnish: [[nekrofilia]]
-*Latin: necrophilia ''f''
-*Slovak: [[nekrofília]] ''f''
+*[[Czech]]: [[nekrofilie]] ''f''
+*[[Finnish]]: [[nekrofilia]]
+*[[French]]: [[nécrophilie]] ''f''
+*[[Latin]]: necrophilia ''f''
+*[[Slovak]]: [[nekrofília]] ''f''
+*[[Spanish]]: [[nigrofilia]] ''f''
