--- a/wiki/necrophilia.wikitext
+++ b/wiki/necrophilia.wikitext
@@ -6,6 +6,7 @@ Greek '''nekros'''&mdash;''dead'' + '''filein'''&mdash;''to love'' + '''ia''' (u
 '''necrophilia'''
 
 # pathological attraction to dead bodies
+# pathological fascination with death
 
 ==== Derived terms ====
 * [[necrophiliac]]
