replaced joke with proper entry <lily pad#64666>

--- a/wiki/lily_pad.wikitext
+++ b/wiki/lily_pad.wikitext
@@ -1,10 +1,5 @@
 ==English==
-
 ===noun===
-'''Lily pad'''
+'''lily pad''' (''plural'' '''lily pads''')
 
-#A place where a girl named Lily lives.
-
-===See also===
-
-[[Toadbungian]]
+#The round [[leaf]] of a [[water lily]], which floats on the surface of the water.
