replaced joke with proper def <rubber band#64667>

--- a/wiki/rubber_band.wikitext
+++ b/wiki/rubber_band.wikitext
@@ -1,8 +1,5 @@
 ==English==
+===Noun===
+'''rubber band'''
 
-===noun===
-'''Rubber band'''
-
-# A group [[of]] people who play [[music]] by inflating [[condom]]s and letting the air out [[in]] a series of [[squeeks]].
-
-[[Category:Scat fetish]]
+#An [[elastic band]].
