/* Synonyms */ <bovine spongiform encephalopathy#37087>

--- a/wiki/bovine_spongiform_encephalopathy.wikitext
+++ b/wiki/bovine_spongiform_encephalopathy.wikitext
@@ -7,7 +7,7 @@ A fatal, neurodegenerative disease of cattle, which is transmissable to humans t
 
 == Synonyms ==
 
-*[[Mad cow disease]]
+*[[Mad cow disease]] (common term)
 *[[variant Creutzfelt-Jakob disease]]
 
 == Translations ==
