/* See also */ <blacksmith#35885>

--- a/wiki/blacksmith.wikitext
+++ b/wiki/blacksmith.wikitext
@@ -21,9 +21,9 @@ Historically, blacksmiths in small communities have played a number of other rol
 *[[goldsmith]]
 *[[whitesmith]]
 *[[silversmith]]
+*[[platinumsmith]]
 *[[ferrier]]
 *[[forge]]
-
 
 == Translation ==
 
