def, syns from Wikipedia; fr:, it: <elastic band#64670>

--- a/wiki/elastic_band.wikitext
+++ b/wiki/elastic_band.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Noun===
-'''elastic band'''
+'''elastic band''' (''plural'' '''elastic bands''')
 
 #A small, narrow loop of rubber or similar material used to hold items together.
 
