--- a/wiki/grandnephew.wikitext
+++ b/wiki/grandnephew.wikitext
@@ -12,10 +12,10 @@
 
 ===Translations===
 *Czech: [[prasynovec]]  ''m''
-*[[French]]: [[petit-neveu]] (1, 2), [[petit-neveu fraternel]] (1), [[petit-neveu sororel]] (2)
+*[[French]]: [[petit-neveu]], [[petit-neveu fraternel]] (''fraternal''), [[petit-neveu sororel]] (''sororal''))
 *[[Latin]]: [[nepos fratris]] ''nominative'', [[nepotis fratris]] ''genitive'' (1); [[nepos sororis]] ''nominative'', [[nepotis sororis]] ''genitive'' (2)
 *Slovak: [[prasynovec]]  ''m''
-*[[Spanish]]: [[grande-sobrino]] (1, 2)
+*[[Spanish]]: [[grande-sobrino]]
 
 ===See Also===
 *[[cousin]]
