--- a/wiki/grandnephew.wikitext
+++ b/wiki/grandnephew.wikitext
@@ -13,7 +13,7 @@
 ===Translations===
 *Czech: [[prasynovec]]  ''m''
 *[[French]]: [[petit-neveu]], [[petit-neveu fraternel]] (''fraternal''), [[petit-neveu sororel]] (''sororal''))
-*[[Latin]]: [[nepos fratris]] (''fraternal'') ''nominative'', [[nepotis fratris]] ''genitive'' (1); [[nepos sororis]] (''sororal'') ''nominative'', [[nepotis sororis]] ''genitive'' (2)
+*[[Latin]]: [[nepos fratris]] (''fraternal'') ''nominative'', [[nepotis fratris]] ''genitive''; [[nepos sororis]] (''sororal'') ''nominative'', [[nepotis sororis]] ''genitive''
 *Slovak: [[prasynovec]]  ''m''
 *[[Spanish]]: [[grande-sobrino]]
 
