translation tables; extra n sense; some translations need to be checked <elastic#42336>

--- a/wiki/elastic.wikitext
+++ b/wiki/elastic.wikitext
@@ -1,6 +1,6 @@
 == English ==
-
 === Adjective ===
+'''elastic''' (''[[comparative]]'' '''more elastic''', ''[[superlative]]'' '''most elastic''')
 
 # Capable of stretching.
 #: ''The rope is somewhat elastic, so expect it to give when you pull on it.''
@@ -11,9 +11,62 @@
 #: ''Demand for entertainment is more elastic than demand for energy.''
 
 === Translations ===
+
+'''capable of stretching'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[élastique]] ''m and f''
+*Italian: [[elastico]] ''m'', elastica ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''made of elastic'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[élastique]] ''m and f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''elasticated'''
+''See'' [[elasticated]]
+
+'''sensitive to changes in price'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[élastique]] ''m and f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.  The numbering is unreliable.
+
 *Finnish: [[elastinen]] (1), [[joustava]] (1)
-*French: [[élastique]] (1, 2); [[élastiqué]] ''m'', élastiquée ''f'' (3); élastique (4)
-*Italian: [[elastico]] ''m'', elastica ''f'' (1)
 
 ==== Related terms ====
 *[[elasticated]]
@@ -21,9 +74,28 @@
 *[[inelastic]]
 
 === Noun ===
+'''elastic''' (''[[countable]] and [[uncountable]]''; ''plural'' '''elastics''')
 
-# An elastic material used in clothing, particularly in waistbands and cuffs.
-#: ''Running shorts use elastic to eliminate the need for a belt.''
+#(''uncountable'') An elastic material used in clothing, particularly in waistbands and cuffs.
+#:''Running shorts use elastic to eliminate the need for a belt.''
+#(''countable'') An [[elastic band]].
 
 ====Translations====
+
+'''material'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
 *French: [[élastique]] ''m'' <!--gender to be confirmed-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''elastic band'''
+''See'' [[elastic band]]
