--- a/wiki/elasticated.wikitext
+++ b/wiki/elasticated.wikitext
@@ -1,10 +1,10 @@
 ==English==
 ===Adjective===
-'''elasticated'''
+'''elasticated''' (''no [[comparative]] or [[superlative]]'')
 
-#(of [[clothing]] or part of a [[garment]]) Containing a strip or strips of [[elastic]], especially in the [[waistband]], [[cuff]]s or the ends of the [[leg]]s, in order to make the clothing [[fit]] [[snugly]].
+#Of [[clothing]] or part of a [[garment]], containing a strip or strips of [[elastic]], especially in the [[waistband]], [[cuff]]s or the ends of the [[leg]]s, in order to make the clothing [[fit]] [[snugly]].
 #:''elasticated jacket''
 #:''slacks with an elasticated waistband''
 
 ====Translations====
-*French: [[élastiqué]]
+*French: [[élastiqué]] ''m'', élastiquée ''f''
