fmt; revised def <dieselpunk#64657>

--- a/wiki/dieselpunk.wikitext
+++ b/wiki/dieselpunk.wikitext
@@ -1,1 +1,5 @@
-Describes a fictional setting in which steam powered technology exists alongside medievil technology.
+==English==
+===Adjective===
+'''dieselpunk''' (''no [[comparative]] or [[superlative]]'')
+
+#Of or having a [[fictional]] [[setting]] in which [[steam power]] and [[medieval]] [[technology]] [[coexist]].
