--- a/wiki/%E5%8E%AF.wikitext
+++ b/wiki/%E5%8E%AF.wikitext
@@ -34,7 +34,7 @@
 
 * '''Readings'''
 ** '''[[On]]''': [[れき]] (reki)
-** '''[[Kun]]''': [[ころみ]] (koromi)
+** '''[[Kun]]''': [[こよみ]] (koyomi)
 
 * '''Other info''':  
 
