fmt; not sure the indefinite article should be included though... <piece of crumpet#4392>

--- a/wiki/piece_of_crumpet.wikitext
+++ b/wiki/piece_of_crumpet.wikitext
@@ -1,4 +1,7 @@
-== [[noun]] ==
+==English==
+=== Noun ===
+'''a [[piece]] of [[crumpet]]'''
+
 #''Slang'' for a very sexually desirable woman.
 #:''She's a piece of [[crumpet]], that one''.
 
