fmt; necessarily just one bag?? <bag lady#64633>

--- a/wiki/bag_lady.wikitext
+++ b/wiki/bag_lady.wikitext
@@ -1,6 +1,5 @@
 ==English==
-
-===Noun Phrase===
-'''bag lady'''
+===Noun phrase===
+'''[[bag]] [[lady]]'''
 
 # (''colloquial'') A [[homeless]] woman who carries her possessions with her in a bag.
