--- a/wiki/lady.wikitext
+++ b/wiki/lady.wikitext
@@ -17,6 +17,13 @@
 ====Synonyms====
 *(toilets): [[little girl's room]] (''colloquial''), [[ladies' room]] <!--is this correct?-->
 
+====Derived terms====
+*[[lady killer]], [[lady-killer]], [[ladykiller]]
+*[[ladylike]]
+*[[bag lady]]
+*[[old lady]]
+*[[Our Lady]]
+
 ====Translations====
 '''woman of breeding'''
 {| border=0  width=100%
